--- a/datasafe-migration-shaded-0.6.1/pom.xml
+++ b/datasafe-migration-shaded-0.6.1/pom.xml
@@ -108,6 +108,10 @@
                                     <pattern>de.adorsys.datasafe.simple.adapter.api.types.DFSCredentials</pattern>
                                     <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DFSCredentials</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.DocumentContent</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DocumentContent</shadedPattern>
+                                </relocation>
 
                                 <relocation>
                                     <pattern>de.adorsys.datasafe</pattern>
