--- a/datasafe-migration-silent/pom.xml
+++ b/datasafe-migration-silent/pom.xml
@@ -263,6 +263,11 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.adorsys</groupId>
+            <artifactId>datasafe-migration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- general test classes -->
         <dependency>
