--- a/datasafe-migration-shaded-1.0.0/pom.xml
+++ b/datasafe-migration-shaded-1.0.0/pom.xml
@@ -61,6 +61,64 @@
 
                             <relocations>
                                 <relocation>
+                                    <pattern>de.adorsys.datasafe.encrypiton.api.types.UserIDAuth</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.encrypiton.api.types.S100_UserIDAuth</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.SimpleDatasafeService</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.S100_SimpleDatasafeService</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.DSDocument</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_DSDocument</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.DocumentDirectoryFQN</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_DocumentDirectoryFQN</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.DocumentFQN</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_DocumentFQN</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.ListRecursiveFlag</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_ListRecursiveFlag</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.impl.SimpleDatasafeServiceImpl</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.impl.S100_SimpleDatasafeServiceImpl</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.encrypiton.api.types.UserID</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.encrypiton.api.types.S100_UserID</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.encrypiton.api.types.keystore.ReadKeyPassword</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.encrypiton.api.types.keystore.S100_ReadKeyPassword</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.FilesystemDFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_FilesystemDFSCredentials</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.AmazonS3DFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_AmazonS3DFSCredentials</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.DFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_DFSCredentials</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.DocumentContent</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.simple.adapter.api.types.S100_DocumentContent</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.types.api.types.ReadKeyPassword</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_0.types.api.types.S100_ReadKeyPassword</shadedPattern>
+                                </relocation>
+
+
+                                <relocation>
                                     <pattern>de.adorsys.datasafe</pattern>
                                     <shadedPattern>de.adorsys.datasafe_1_0_0</shadedPattern>
                                 </relocation>
