--- a/datasafe-migration/pom.xml
+++ b/datasafe-migration/pom.xml
@@ -178,14 +178,14 @@
         </dependency>
 
         <!-- this is brute force to get all the needed classes of datasafe e.g. dagger, runtime delegate, bouncy castle and so on -->
-<!--
-        <dependency>
-            <groupId>de.adorsys</groupId>
-            <artifactId>datasafe-simple-adapter-impl</artifactId>
-            <version>1.0.0</version>
-            <scope>test</scope>
-        </dependency>
--->
+        <!--
+                <dependency>
+                    <groupId>de.adorsys</groupId>
+                    <artifactId>datasafe-simple-adapter-impl</artifactId>
+                    <version>1.0.0</version>
+                    <scope>test</scope>
+                </dependency>
+        -->
         <!-- end brute force -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
@@ -319,6 +319,20 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
