DOC-286 call implicit migration by test

--- a/datasafe-migration-silent/pom.xml
+++ b/datasafe-migration-silent/pom.xml
@@ -273,6 +273,11 @@
             <artifactId>shedlock-spring</artifactId>
             <version>${shedlock.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
 
         <!-- temporary start -->
         <dependency>
