--- a/datasafe-migration-silent/src/test/resources/application-filesystem.yml
+++ b/datasafe-migration-silent/src/test/resources/application-filesystem.yml
@@ -1,4 +1,4 @@
 datasafe:
   storeconnection:
     filesystem:
-      rootbucket: target/test-filesystem
+      rootbucket: target/test-filesystem/filetest/
