--- a/datasafe-migration-silent/src/test/resources/simplelogger.properties
+++ b/datasafe-migration-silent/src/test/resources/simplelogger.properties
@@ -6,3 +6,4 @@ org.slf4j.simpleLogger.showThreadName=true
 
 org.slf4j.simpleLogger.logFile=System.out
 org.slf4j.simpleLogger.log.de.adorsys.datasafemigration.MigrationLogic=debug
+org.slf4j.simpleLogger.log.de.adorsys.datasafemigration.DirectDFSAccess=debug
