sepatate tests run, but not all together

--- a/datasafe-migration-silent/src/test/resources/application-filesystem.yml
+++ b/datasafe-migration-silent/src/test/resources/application-filesystem.yml
@@ -2,3 +2,10 @@ datasafe:
   storeconnection:
     filesystem:
       rootbucket: target/test-filesystem/filetest/
+
+
+  migration:
+    lockprovider:
+      jdbc:
+        url: jdbc:hsqldb:hsql://localhost/test
+        username: SA
