--- a/datasafe-migration-silent/pom.xml
+++ b/datasafe-migration-silent/pom.xml
@@ -173,14 +173,8 @@
             </exclusions>
 
         </dependency>
-<!--
-        <dependency>
-            <groupId>de.adorsys</groupId>
-            <artifactId>datasafe-migration</artifactId>
-            <version>${project.version}</version>
-        </dependency>
--->
 
+    <!-- spring start -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -206,7 +200,15 @@
             <artifactId>spring-boot</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.1.9.RELEASE</version>
+        </dependency>
 
+        <!-- spring end -->
+
+        <!-- datasafe start -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
@@ -262,6 +264,7 @@
             <artifactId>siv-mode</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <!-- datasafe end -->
 
         <dependency>
             <groupId>de.adorsys</groupId>
@@ -274,35 +277,31 @@
             <version>${shedlock.version}</version>
         </dependency>
         <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
+            <version>${shedlock.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
-        </dependency>
-
-        <!-- temporary start -->
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>2.3.4</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>2.5.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>5.1.9.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>net.javacrumbs.shedlock</groupId>
-            <artifactId>shedlock-provider-jdbc-template</artifactId>
-            <version>${shedlock.version}</version>
-        </dependency>
 
 
-        <!-- temporary end -->
+        <!-- test hsql for shedlock start -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.4</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- test hsql for shedlock end -->
+
 
         <!-- WithStorageProviderStuff -->
         <dependency>
