--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ jdk:
 
 
 script:
-  # tests are not done with mvn test - dont know why
-  - mvn install
+  # tests wont run with mvn test because shade plugin is only running with
+  # in package phase, e.g. when pom is created
+  - mvn package test
 
 before_deploy:
   - echo $GPG_SECRET_KEY | base64 --decode | $GPG_EXECUTABLE --import
