Start next iteration with 0.0.2-SNAPSHOT

--- a/datasafe-migration/pom.xml
+++ b/datasafe-migration/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.adorsys</groupId>
         <artifactId>datasafe-migration-root</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>datasafe-migration</artifactId>
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>de.adorsys</groupId>
             <artifactId>datasafe-migration-shaded-0.6.1</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>de.adorsys</groupId>
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>de.adorsys</groupId>
             <artifactId>datasafe-migration-shaded-1.0.0</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>de.adorsys</groupId>
