--- a/datasafe-migration-silent/src/test/resources/application-filesystem-distinctfolder.yml
+++ b/datasafe-migration-silent/src/test/resources/application-filesystem-distinctfolder.yml
@@ -10,3 +10,5 @@ datasafe:
         url: jdbc:hsqldb:hsql://localhost/test
         username: SA
         distinctfolder: true
+        createtablecommand: CREATE TABLE IF NOT EXISTS shedlock(name VARCHAR(64), lock_until TIMESTAMP(3), locked_at TIMESTAMP(3), locked_by  VARCHAR(255), PRIMARY KEY (name))
+
