--- a/datasafe-migration-silent/src/test/resources/application-minio.yml
+++ b/datasafe-migration-silent/src/test/resources/application-minio.yml
@@ -13,3 +13,5 @@ datasafe:
       jdbc:
         url: jdbc:hsqldb:hsql://localhost/test
         username: SA
+        createtablecommand: CREATE TABLE IF NOT EXISTS shedlock(name VARCHAR(64), lock_until TIMESTAMP(3), locked_at TIMESTAMP(3), locked_by  VARCHAR(255), PRIMARY KEY (name))
+
