EXTENDED to choose mysql or hikari

--- a/datasafe-migration-silent/pom.xml
+++ b/datasafe-migration-silent/pom.xml
@@ -301,6 +301,11 @@
             <scope>test</scope>
         </dependency>
         <!-- test hsql for shedlock end -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
 
 
         <!-- WithStorageProviderStuff -->
