--- a/datasafe-migration-silent/src/test/resources/application-minio-distinctfolder.yml
+++ b/datasafe-migration-silent/src/test/resources/application-minio-distinctfolder.yml
@@ -9,10 +9,10 @@ datasafe:
 
 
   migration:
+    distinctfolder: true
     lockprovider:
       jdbc:
-        url: jdbc:hsqldb:hsql://localhost/test
-        username: SA
-        distinctfolder: true
-        createtablecommand: CREATE TABLE IF NOT EXISTS shedlock(name VARCHAR(64), lock_until TIMESTAMP(3), locked_at TIMESTAMP(3), locked_by  VARCHAR(255), PRIMARY KEY (name))
+        hikari:
+          url: jdbc:hsqldb:hsql://localhost/test
+          username: SA
 
