fixed set password

--- a/datasafe-migration-silent/src/test/resources/application-mysql.yml
+++ b/datasafe-migration-silent/src/test/resources/application-mysql.yml
@@ -7,6 +7,6 @@ datasafe:
     lockprovider:
       jdbc:
         mysql:
-          url: jdbc:mysql://locahost:3333/shedlock
+          url: jdbc:mysql://localhost:3333/shedlock
           username: root
           password: my-secret-pw
