--- a/datasafe-migration-silent/src/test/resources/application-mysql.yml
+++ b/datasafe-migration-silent/src/test/resources/application-mysql.yml
@@ -12,5 +12,5 @@ datasafe:
           password: my-secret-pw
 
 
-// to run this test, start docker with
-// docker run --name mysql-5.5 -e MYSQL_ROOT_PASSWORD=my-secret-pw -p 3333:3306 -d mysql:5.5
+# to run this test, start docker with
+# docker run --name mysql-5.5 -e MYSQL_ROOT_PASSWORD=my-secret-pw -p 3333:3306 -d mysql:5.5
