--- a/datasafe-migration-silent/pom.xml
+++ b/datasafe-migration-silent/pom.xml
@@ -296,6 +296,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.8</version>
+        </dependency>
 
 
         <!-- test hsql for shedlock start -->
