TIMEOUT for migration to be configured

--- a/datasafe-migration-silent/src/test/resources/application-filesystem.yml
+++ b/datasafe-migration-silent/src/test/resources/application-filesystem.yml
@@ -4,6 +4,7 @@ datasafe:
       rootbucket: target/test-filesystem/filetest/
 
   migration:
+    timeout: 15231
     lockprovider:
       jdbc:
         hikari:
