--- a/datasafe-migration-shaded-1.0.2/pom.xml
+++ b/datasafe-migration-shaded-1.0.2/pom.xml
@@ -9,13 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>datasafe-migration-shaded-1.0.1</artifactId>
+    <artifactId>datasafe-migration-shaded-1.0.2</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>de.adorsys</groupId>
             <artifactId>datasafe-simple-adapter-spring</artifactId>
-            <version>1.0.0.1</version>
+            <version>1.0.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
@@ -116,7 +116,14 @@
                                     <pattern>de.adorsys.datasafe.types.api.types.ReadKeyPassword</pattern>
                                     <shadedPattern>de.adorsys.datasafe_1_0_1.types.api.types.S101_ReadKeyPassword</shadedPattern>
                                 </relocation>
-
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.inbox.api.InboxService</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_1.inbox.api.S101_InboxService</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.impl.config.PathEncryptionConfig</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_1_0_1.simple.adapter.impl.config.S101_PathEncryptionConfig</shadedPattern>
+                                </relocation>
 
                                 <relocation>
                                     <pattern>de.adorsys.datasafe</pattern>
