--- a/datasafe-migration/pom.xml
+++ b/datasafe-migration/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>de.adorsys</groupId>
         <artifactId>datasafe-migration-root</artifactId>
-        <version>1.0.0.2-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
 
     <artifactId>datasafe-migration</artifactId>
