--- a/datasafe-migration-shaded-1.0.3/pom.xml
+++ b/datasafe-migration-shaded-1.0.3/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>datasafe-migration-root</artifactId>
         <groupId>de.adorsys</groupId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.3.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
