--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.adorsys</groupId>
     <artifactId>datasafe-migration-root</artifactId>
-    <version>1.0.3.1</version>
+    <version>1.0.4-SNAPSHOT</version>
 
     <name>datasafe-migration-root</name>
     <description>simple datasafe adapter with silent migration under the hood</description>
